# test-02

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deployment.yaml
src/: main.py
src/adapters/db/: config.py  connection.py
src/adapters/db/migrations/alembic/: env.py
src/adapters/db/migrations/alembic/versions/: 28f93ea891a0_initial_migration.py  bcc3d2dc65e1_initial_migration.py
src/adapters/db/models/: aggregate_all_models.py  product.py  shift_task.py
src/adapters/db/repositories/: product_reposirtory.py  task_repositories.py
src/adapters/db/repositories/converters/: product.py  task.py
src/domain/entities/: shift_task.py
src/domain/exceptions/: task.py
src/interactors/: product_service.py  task_service.py
src/interactors/task/: task_service.py
src/presentation/web_api/endpoints/: product.py  task.py
src/presentation/web_api/exceptions/: task.py
src/presentation/web_api/providers/abstract/: product.py  task.py
src/presentation/web_api/schemas/: shift_task.py
tests/: test_1.py
